# Epistemic_Debt_Compiler

./: .gitignore  AGENTS.md  README.md  debt  debt-dashboard.sh  pyproject.toml  rules.json  setup.sh
.claude/: settings.json
app/: claude_sessions.py  codex_sessions.py  config.py  engine.py  formatters.py  gemini.py  gemini_sessions.py  hooks.py  i18n.py  main.py  models.py  parsers.py  registry.py  rules.py
docs/: architecture.md  branding.md  cli-spec.md  demo-data.md  demo-script.md  hackathon-design.md  prd.md  presentation.html  presentation.md  rule-engine.md  script.md
examples/: session_bugfix.json  session_destructive.json  session_safe.json
examples/demo_oauth/: prep.sh  run_demo.sh  session.json  session_demo.json  session_repaid.json
tests/: conftest.py  run_oauth_tests.sh  test_claude_sessions.py  test_codex_sessions.py  test_engine.py  test_gemini_sessions.py  test_main.py  test_parsers.py  test_registry.py
